# Crypto_FreeAPIs

./: .gitignore  Dockerfile  REPORT_OPTIONS_INTEGRATION.md  REPORT_OPTIONS_SEPARATION.md  config.yaml  config_options.yaml  config_strategy.yaml  docker-compose.yml  local_pipeline_stress_test.py  options_collector.py  requirements-options.txt  requirements.txt  run.py  run_options.py  run_strategy_data.py
.trae/documents/: ohlcv-daily-data-pipeline.md  期权合约数据采集系统开发计划.md
deribit-options-data-collector/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  final_report.py  launch.py  prometheus.yml  pyproject.toml  run_collector.py  test_api_connectivity.py  validate_data.py
deribit-options-data-collector/.ruff/: rules.toml
deribit-options-data-collector/config/: collector.yaml
deribit-options-data-collector/db/: .gitkeep
deribit-options-data-collector/src/deribit_options_collector/: __init__.py  __main__.py  config.py  models.py  pipeline.py
deribit-options-data-collector/src/deribit_options_collector/api/: __init__.py  rest_client.py  websocket_client.py
deribit-options-data-collector/src/deribit_options_collector/collectors/: __init__.py  base.py  incremental_collector.py  snapshot_collector.py
deribit-options-data-collector/src/deribit_options_collector/metrics/: __init__.py  prometheus.py
deribit-options-data-collector/src/deribit_options_collector/storage/: __init__.py  parquet_store.py  sqlite_store.py
deribit-options-data-collector/tests/: conftest.py  test_api.py  test_collectors.py  test_config.py  test_metrics.py  test_models.py  test_storage.py
docs/: BACKTESTING_READINESS_ASSESSMENT_REPORT.md  DATA_FIELD_QUALITY_ASSESSMENT_REPORT.md  PLAN_OPTIONS_PERP_DATA_SYSTEM.md  PROJECT_STARTUP_TEMPLATE.md  README.md  SERVER_MANAGEMENT.md
docs/deribit/: DATA_INFRASTRUCTURE_ASSESSMENT_REPORT.md  data_infra_options_perp_strategies.md  data_infrastructure_standalone.md
docs/dev_report/: DATA_VERIFICATION_REPORT.md  DEV_COMPLETION_REPORT_V3.md  LAUNCHER_COMPLETION_REPORT.md  TECH_DEBT_CLEANUP_REPORT.md
docs/prompts/: DEV_START_PROMPT_V3.md
fetchers/: __init__.py  base.py  binance.py  binance_spot_fetcher.py  deribit.py  deribit_options.py  funding_rate.py  hyperliquid.py  margin_params.py  mark_price.py  quote_fetcher.py  risk_free_rate.py  ws_orderbook.py
models/: __init__.py  ohlcv.py
ohlcv-collector/: config.yaml  launch.py
pipeline/: __init__.py  strategy_configs.py  strategy_pipeline.py
processors/: __init__.py  basis_calculator.py  gap_detector.py  greeks_processor.py  outlier_filter.py  time_aligner.py  vol_surface.py
scripts/: prune_cloud_data.sh  prune_data.py  pull_data.sh  verify_collected_data.py
storage/: __init__.py  chunked_buffer.py  parquet_store.py
tests/: test_basis_calculator.py  test_binance_spot_fetcher.py  test_chunked_buffer.py  test_config_loader.py  test_deribit_options.py  test_funding_rate.py  test_gap_detector.py  test_greeks_processor.py  test_mark_price.py  test_options_collector.py  test_outlier_filter.py  test_pull_data.py  test_quote_fetcher.py  test_risk_free_rate.py  test_strategy_configs.py  test_strategy_pipeline.py  test_time_aligner.py  test_vol_surface.py  test_ws_orderbook.py
utils/: __init__.py  config_loader.py  interpolation.py  logger.py  main_contract.py  rate_limiter.py
